--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-smart-table",
-  "version": "1.0.0",
+  "name": "atv-smart-table",
+  "version": "1.0.1",
   "description": "Angular 2+ Smart Table",
   "main": "./bundles/table.umd.js",
   "module": "./index.js",
